freemed project changelog
($Id$)

* Fri Mar 16 2001 fforest
   - fixedform.EN.data updated with latest NSF format for commercial
     insurance.
   - lib/containers removed unused field from coverage class.
   - lib/render replaced our loop for data padding with PHP str_pad
     function in hopes of cutting down CPU utilization. 
   - mcsi_ncf_ci updated to handle secondary payer records.
   - procedure module. added procrefdoc to add_page global list.

* Thu Mar 15 2001 rufustfirefly
  - updated Fred's modules to have his name on them. still need
    $MODULE_DESCRIPTION, though ...
  - slight alternate_colors optimizations in modules
  - added lib/error_handler.php with hooks in freemed.php
  - set freemed_display_box_bottom to check for a box, as well as top, so
    that *those* errors are fixed
  - patient.php: fixed "Manage This Patient" link, and prettied up
    SQL output
  - lib/freemed.php: now needs phpwebtools 0.2.1, and version kept in
    seperate define
  - reports.php: prettier output (added font tags)
  - lib/error_handler.php: updated to be much better, now sends stubs to
    http://www.freemed.org/report_bug.php ... must customize this at
    some point
  - lib/freemed.php: added BUG_TRACKER define to turn it on or off

* Thu Mar 15 2001 fforest
  - lib/macros  new define for COPAY transaction
  - lib/module_edi code to remove slashes from data.
  - lib/render_forms added code to handle Numeric formating.
  - eoc module view was not displaying data due to missing global patient.
  - fixed_form module  fix bug in scrolling code. If changes were made
    to screen data the changes were not reflected in the hidden arrays.
  - highmark module. Added code to handle student status correctly. fixed bug
    auth validation to validate the auth dates to proc dates instead of current date.
    added pos to sql order and control break
  - payment module. added code to handle new COPAY transaction